Add content to css

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
   <section>
-    <header>
-      <h1>Intense Mint Dark Chocolate</h1>
-    </header>
+    <div class="content"
+    <h1>Intense Mint Dark Chocolate</h1>
 
-    <h2>85% Cocoa</h2>
+    <div class="info">
+      <strong>85% Cocoa</strong>
+      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+    </div>
 
-    <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+    <a>Buy now</a>
+  </div>
 
-  <button>
-    <a class="btn" href="#">Buy now</a>
-  </button>
-
+    <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
   </section>
+
 </body>
 </html>
