--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
   <section>
-    <div class="content"
-    <h1>Intense Mint Dark Chocolate</h1>
+    <div class="content">
 
-    <div class="info">
-      <strong>85% Cocoa</strong>
-      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <h1>Intense Mint Dark Chocolate</h1>
+
+      <div class="info">
+        <strong>85% Cocoa</strong>
+        <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      </div>
+
+      <a href="btn">Buy now</a>
     </div>
-
-    <a>Buy now</a>
-  </div>
 
     <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
   </section>
